         resize the outer window, which might result in a smaller window overall.
         or something like that. guys, send me a patch.
WISH: coloured pastebin
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts
TODO: perl-shell-window? perl-unix-socket?
TODO: command line editing when icanon?

        - avoid spurious redraws of the bg image when bg is transparent or
          when using 'root' mode (Emanuele Giaquinta).
        - make OSC 20 simpler and more correct (Emanuele Giaquinta).
        - fix regression in urxvtd that prevented options from being correctly
          set (reported by Michal Vaner).
        - fix build on XFree86.

9.09 Sat Nov 13 01:39:07 CET 2010
	- NOTICE: this release updates terminfo/termcap.
	- the bestest release ever.
        - it was verified that urxvt handles µ and μ correctly.
	- add support for blending and blurring with XRender (Emanuele Giaquinta).
	- add support for using gdk-pixbuf as image backend (Emanuele Giaquinta).
	- cleanup and minor fixes of the image code (Emanuele Giaquinta).
	- new perl extension "confirm-paste" (Emanuele Giaquinta).
	- new on_tt_paste perl hook and tt_paste perl binding (Emanuele Giaquinta).
	- new on_bell perl hook (Emanuele Giaquinta).
	- searchable-scrollback no longer ignores the first line
	  (Emanuele Giaquinta).
	- properly set VSTATUS in termios for *BSD (reported by Ed Schouten).
	- fix utmpx detection on upcoming FreeBSD 9.
	- Use COMPOUND_TEXT encoding for WM_NAME/WM_ICON_NAME value when it
	  is not fully convertible to STRING (patch by James Cloos).
        - fix a buffer overflow that would cause wrong key sequences to
          be generated for numpad keys (introduced in 9.05).
        - fix definition of sgr0 to work around limitations in luit.
	- extend ISO 14755 5.4 mode to also print the font name of the
	  characters other than first one in the selected cell